Define sheet update as default and make CSV generation optional
